# rocket-mongo-api

./: Cargo.toml
src/: lib.rs  main.rs
src/data/: db.rs  mod.rs  mongo_connection.rs
src/routes/: echo.rs  mod.rs  user.rs
tests/: basic_test.rs
tests/common/: mod.rs
