[package]
name = "rocket-tut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.136"
rocket = {version = "0.5.0-rc.2", features = ["json"]}
uuid = { version = "1.2.2", features = ["serde", "v4"] }
chrono = { version = "0.4.23", features = ["serde"] }
rand = "0.8.5"
rust-argon2 = "1.0.0"
dotenv = "0.15.0"
serde_json = "1.0.91"
[dependencies.mongodb]
version = "2.3.1"
default-features = false
features = ["sync"]

[dev-dependencies]
lazy_static = "1.4.0"
